--- a/History.textile
+++ b/History.textile
@@ -1,3 +1,6 @@
+h3. 0.5.2
+* Force checksum query when you call dsChecksumValid, unless it's already in the profile.
+
 h3. 0.5.1
 * symbolize keys that are passed as config options
 
